--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "gatsby-plugin-react-helmet": "^3.0.4",
     "gatsby-plugin-sitemap": "^2.0.3",
     "gatsby-plugin-styled-components": "^3.0.4",
+    "gatsby-plugin-transition-link": "^1.4.5",
     "gatsby-remark-autolink-headers": "^2.0.12",
     "gatsby-remark-images-contentful": "^2.0.5",
     "gatsby-remark-prismjs": "^3.1.4",
     "gatsby-source-contentful": "^2.0.20",
     "gatsby-source-filesystem": "^2.0.12",
     "gatsby-transformer-remark": "^2.1.17",
+    "gsap": "^2.0.2",
     "inquirer": "^6.2.1",
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
