--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-offline": "^2.0.20",
     "gatsby-plugin-react-helmet": "^3.0.4",
     "gatsby-plugin-react-svg": "^2.0.0",
+    "gatsby-plugin-sharp": "^2.0.17",
     "gatsby-plugin-sitemap": "^2.0.3",
     "gatsby-plugin-styled-components": "^3.0.4",
     "gatsby-plugin-transition-link": "^1.4.5",
@@ -30,6 +31,7 @@
     "gatsby-source-contentful": "^2.0.20",
     "gatsby-source-filesystem": "^2.0.12",
     "gatsby-transformer-remark": "^2.1.17",
+    "gatsby-transformer-sharp": "^2.1.10",
     "gsap": "^2.0.2",
     "inquirer": "^6.2.1",
     "lodash": "^4.17.11",
