--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-fittext": "^1.0.0",
     "react-helmet": "^5.2.0",
     "react-id-swiper": "^1.6.8",
+    "react-overlays": "^1.1.1",
     "react-slick": "^0.23.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^4.1.3"
