--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-helmet": "^5.2.0",
     "react-id-swiper": "^1.6.8",
     "react-overlays": "^1.1.1",
+    "react-player": "^1.8.0",
     "react-slick": "^0.23.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^4.1.3"
