--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gatsby-transformer-remark": "^2.1.17",
     "gatsby-transformer-sharp": "^2.1.10",
     "gsap": "^2.0.2",
+    "history": "^4.7.2",
     "inquirer": "^6.2.1",
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
@@ -47,6 +48,8 @@
     "react-id-swiper": "^1.6.8",
     "react-overlays": "^1.1.1",
     "react-player": "^1.8.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-slick": "^0.23.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^4.1.3"
