--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-slick": "^0.23.2",
+    "react-sticky": "^6.0.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^4.1.3"
   },
