--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
     "react-id-swiper": "^1.6.8",
     "react-overlays": "^1.1.1",
     "react-player": "^1.8.0",
+    "react-reveal": "^1.2.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-slick": "^0.23.2",
-    "react-sticky": "^6.0.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^4.1.3"
   },
