--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-reveal": "^1.2.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-scrollable-anchor": "^0.6.1",
     "react-slick": "^0.23.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^4.1.3"
