--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "gatsby-plugin-sharp": "^2.0.17",
     "gatsby-plugin-sitemap": "^2.0.3",
     "gatsby-plugin-styled-components": "^3.0.4",
-    "gatsby-plugin-transition-link": "^1.4.5",
+    "gatsby-plugin-transition-link": "^1.5.0-beta.3",
     "gatsby-remark-autolink-headers": "^2.0.12",
     "gatsby-remark-images-contentful": "^2.0.5",
     "gatsby-remark-prismjs": "^3.1.4",
