--- a/package.json
+++ b/package.json
@@ -62,16 +62,13 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "test": "npm run lint:css && npm run lint:js && npm run check-pretty",
-    "setup": "node ./bin/setup.js",
-    "dev": "gatsby develop",
-    "lint:js": "eslint --ext .js,.jsx .",
-    "lint:css": "stylelint 'src/**/*.js'",
-    "check-pretty": "prettier -l {,src/**/}*.{js,jsx,json,css,scss}",
-    "format": "prettier --write \"src/**/*.js\"",
-    "clean": "rm -rf public .cache"
+    "start": "npm run develop",
+    "clean": "rimraf .cache public",
+    "build": "npm run clean && gatsby build",
+    "develop": "npm run clean && gatsby develop",
+    "serve": "gatsby serve",
+    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "eslint": "^5.10.0",
