--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-router-dom": "^4.3.1",
     "react-scrollable-anchor": "^0.6.1",
     "react-slick": "^0.23.2",
+    "react-transition-group": "^2.5.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^4.1.3"
   },
@@ -74,6 +75,7 @@
     "eslint": "^5.10.0",
     "eslint-config-gatsby-standard": "^2.1.1",
     "prettier": "^1.15.3",
+    "react-spring": "^8.0.5",
     "stylelint": "9.9.0",
     "stylelint-config-prettier": "^4.0.0",
     "stylelint-config-standard": "^18.2.0",
