--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Ryan Wiemer <ryan@ryanwiemer.com>",
   "dependencies": {
     "@contentful/gatsby-transformer-contentful-richtext": "^12.1.2",
+    "animate.css": "^3.7.0",
     "babel-plugin-styled-components": "^1.10.0",
     "chalk": "^2.4.1",
     "contentful-import": "^7.4.3",
@@ -17,6 +18,7 @@
     "gatsby-plugin-feed": "^2.0.11",
     "gatsby-plugin-google-analytics": "^2.0.8",
     "gatsby-plugin-google-fonts": "0.0.4",
+    "gatsby-plugin-layout": "^1.0.12",
     "gatsby-plugin-manifest": "^2.0.12",
     "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-plugin-nprogress": "^2.0.7",
@@ -42,6 +44,7 @@
     "path": "^0.12.7",
     "prismjs": "^1.15.0",
     "react": "^16.6.3",
+    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.6.3",
     "react-fittext": "^1.0.0",
     "react-helmet": "^5.2.0",
