--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.6.3",
     "react-fittext": "^1.0.0",
+    "react-ga": "^2.5.7",
     "react-helmet": "^5.2.0",
     "react-id-swiper": "^1.6.8",
     "react-overlays": "^1.1.1",
