--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gatsby-source-filesystem": "^2.0.12",
     "gatsby-transformer-remark": "^2.1.17",
     "gatsby-transformer-sharp": "^2.1.10",
+    "graphql-tag": "^2.10.1",
     "gsap": "^2.0.2",
     "history": "^4.7.2",
     "inquirer": "^6.2.1",
