:sparkles: feature: blog page styled

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gsap": "^2.0.2",
     "history": "^4.7.2",
     "inquirer": "^6.2.1",
+    "install": "^0.12.2",
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
     "path": "^0.12.7",
