--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-scrollable-anchor": "^0.6.1",
     "react-slick": "^0.23.2",
     "react-transition-group": "^2.5.3",
+    "sharp": "^0.22.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^4.1.3"
   },
